# vox4ai-skill-lib

./: .gitignore  GEMINI.md  LICENSE  README.md  pyproject.toml
src/vox4ai_skill/: skill.py
src/vox4ai_skill_lib/: __init__.py  api.py  skill.py
tests/: test_api.py  test_skill.py
