[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vox4ai-skill"
version = "0.1.0"
description = "TTS skill for AI agents — synthesize, play, save speech via tts-plugin-bridge"
requires-python = ">=3.10"
dependencies = [
    "tts-plugin-bridge",
    "aiohttp",
]
license = {text = "MIT"}

[tool.uv.sources]
tts-plugin-bridge = { path = "../tts-plugin-bridge", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]